--- a/src/components/Navbar/SkillsMenu/SkillsMenu.module.scss
+++ b/src/components/Navbar/SkillsMenu/SkillsMenu.module.scss
@@ -1,4 +1,4 @@
-.skillsMenu {
+.dropdownMenu {
   @apply flex gap-8 px-6 py-4 bg-white text-black rounded-md top-2  ;
   box-shadow:
     0 4px 9px 0 rgba(0, 0, 0, 0.10),
@@ -8,18 +8,18 @@
     0 104px 29px 0 rgba(0, 0, 0, 0.00);
 }
 
-.skillsMenuArrow {
+.dropdownMenuArrow {
   @apply fill-white;
 }
 
-.skillsMenuDropdownArrow {
+.dropdownMenuDropdownArrow {
   transition: all .2s ease-in-out;
 }
 
-.skillsMenuTrigger {
+.dropdownMenuTrigger {
   @apply flex gap-2 items-center uppercase;
 
-  &[data-state="open"] .skillsMenuDropdownArrow{
+  &[data-state="open"] .dropdownMenuDropdownArrow{
     transform: rotateX(180deg );
   }
 }
