--- a/src/components/UI/Dropdown/style.module.scss
+++ b/src/components/UI/Dropdown/style.module.scss
@@ -1,26 +1,25 @@
-.skillsMenu {
-  @apply flex gap-8 px-6 py-4 bg-white text-black rounded-md top-2  ;
-  box-shadow:
-          0 4px 9px 0 rgba(0, 0, 0, 0.10),
-          0 17px 17px 0 rgba(0, 0, 0, 0.09),
-          0 37px 22px 0 rgba(0, 0, 0, 0.05),
-          0 66px 27px 0 rgba(0, 0, 0, 0.01),
-          0 104px 29px 0 rgba(0, 0, 0, 0.00);
+.dropdownMenu {
+  @apply flex gap-8 px-6 py-4 bg-white text-black rounded-md top-2 border border-gray-200;
+  box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.10),
+  0 17px 17px 0 rgba(0, 0, 0, 0.09),
+  0 37px 22px 0 rgba(0, 0, 0, 0.05),
+  0 66px 27px 0 rgba(0, 0, 0, 0.01),
+  0 104px 29px 0 rgba(0, 0, 0, 0.00);
 }
 
-.skillsMenuArrow {
+.dropdownMenuArrow {
   @apply fill-white;
 }
 
-.skillsMenuDropdownArrow {
+.dropdownMenuDropdownArrow {
   transition: all .2s ease-in-out;
 }
 
-.skillsMenuTrigger {
+.dropdownMenuTrigger {
   @apply flex gap-2 items-center uppercase;
 
-  &[data-state="open"] .skillsMenuDropdownArrow{
-    transform: rotateX(180deg );
+  &[data-state="open"] .dropdownMenuDropdownArrow {
+    transform: rotateX(180deg);
   }
 }
 
@@ -29,9 +28,11 @@
   animation-duration: 0.6s;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
 }
+
 .DropdownMenuContent[data-side='top'] {
   animation-name: slideUp;
 }
+
 .DropdownMenuContent[data-side='bottom'] {
   animation-name: slideDown;
 }
